fix mis-aligned lists in asides

--- a/scss/layout/_aside.scss
+++ b/scss/layout/_aside.scss
@@ -109,6 +109,5 @@
     padding-bottom: 9px;
 }
 .sidebox ul {
-    margin: 0;
     padding: 0;
 }
